fix: Remove width to fix flex spacing growth

--- a/blocks/identity-block/components/Button/styles.scss
+++ b/blocks/identity-block/components/Button/styles.scss
@@ -1,5 +1,4 @@
 .xpmedia-button {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
